# data_vs_architecture

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: analysis_01_control_experiments.py  analysis_01_variance_decomposition.py  analysis_02_error_correlation.py  analysis_03_scaling_laws.py  analysis_04_collective_failures.py  analysis_04_coverage_reference_sensitivity.py  analysis_05_resource_allocation.py  analysis_06_sensitivity_checks.py  analysis_07_family_dependence_robustness.py  analysis_08_uncertainty_resampling.py  analysis_09_failure_overlap_stratification.py  analysis_10_structure_overlap_proxy.py  analysis_11_structure_density_and_symmetry.py  analysis_12_prototype_spacegroup_rarity.py  analysis_13_motif_hotspot_modeling.py  analysis_14_hotspot_ablation.py  analysis_15_prototype_component_decomposition.py  analysis_16_component_ablation.py  analysis_17_residual_full_token_branches.py  analysis_18_background_interactions.py  analysis_19_background_higher_order_interactions.py  analysis_20_background_residual_token_layer.py  analysis_21_background_target_encoding_ranker.py  analysis_22_ti10_failure_mode_decomposition.py  analysis_23_ti10_target_encoding_ranker.py  analysis_24_permutation_significance.py  build_background_component_interaction_proxy.py  build_background_higher_order_interaction_proxy.py  build_background_residual_token_proxy.py  build_formula_union_index.py  build_model_table.py  build_mp2022_formula_index.py  build_mptrj_formula_index.py  build_results_manifest.py  build_structure_signature_indexes.py  build_submission_package.py  (+23 more)
(+5 files in other folders)
